--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,12 @@ button:hover {
     transform: translate(-50%, -50%);
     font-size: 85px;
 }
+
+.winner {
+    background-color: #eeeded;
+}
+
+.winner .player-name {
+    font-weight: 500;
+    color: #EB4D4D;
+}
